# renikud-v5

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
plans/emnlp_workshop/: README.md
renikud-onnx/examples/: basic.py  gradio_app.py
renikud-onnx/scripts/: export.py
scripts/: benchmark.py
src/: config.py  infer.py  model.py  prepare_classifier_tokens.py  train.py
