[project]
name = "renikud-v4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.6.1",
    "jiwer>=4.0.0",
    "regex>=2026.2.28",
    "tensorboard>=2.20.0",
    "setuptools<81",  # tensorboard needs pkg_resources, removed in setuptools 82
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers[torch]>=5.2.0",
    "huggingface-hub>=1.5.0",
    "wandb>=0.25.0",
]

# CUDA Config

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv.workspace]
members = [
    "renikud-onnx",
]

